JSW Devsb/src/objects/District_Actuals__c.object
<CustomObject>
    <fields>
        <fullName>Commercial_Invoice_Date__c</fullName>
        <label>Commercial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depot_Actuals__c</fullName>
        <label>Depot Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Actuals__c</fullName>
        <label>Direct Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Actuals__c</fullName>
        <label>District Actuals</label>
        <referenceTo>MRM_Targets__c</referenceTo>
        <relationshipName>District_Rail_Road_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>District_Rail_Actuals__c</fullName>
        <label>District Rail Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Road_Actuals__c</fullName>
        <label>District Road Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSR_C_F_Actuals__c</fullName>
        <label>NSR C&amp;F Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Disc_value_Actuals__c</fullName>
        <label>NSR Disc Value Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_MMC_Actuals__c</fullName>
        <label>NSR MMC Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Other__c</fullName>
        <label>NSR Other Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_PD__c</fullName>
        <label>NSR PD+SPL+ADDL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_PRFT_Dump_Value_Actuals__c</fullName>
        <label>NSR PRFT Dump Value Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Packing_Cost_Actuals__c</fullName>
        <label>NSR Packing Cost Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Qty_Actuals__c</fullName>
        <label>NSR Qty Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_T_Actuals__c</fullName>
        <label>NSR/T Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Total_Basic_Price_Actuals__c</fullName>
        <label>NSR Total Basic Price Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Value_Actuals__c</fullName>
        <label>NSR Value Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Trade_Actuals__c</fullName>
        <label>Non Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Actuals__c</fullName>
        <label>Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cement_MRM_Volume_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Cement MRM Volume Actuals</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DRR-{0000000000}</displayFormat>
        <label>District(Rail/Road) Actuals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cement MRM Volume Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>